Code cleanup from findbugs violations